src/test/ui/repr/repr-align-assign.stderr
error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/repr-align-assign.rs:5:8
   |
LL | #[repr(align=8)]
   |        ^^^^^^^ If I were you, I would simply use parentheses instead: `align(8)`

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/repr-align-assign.rs:8:8
   |
LL | #[repr(align="8")]
   |        ^^^^^^^^^ If I were you, I would simply use parentheses instead: `align(8)`

error: aborting due to 2 previous errors

